# Loan-approval-predictor

./: .gitignore  Dockerfile.app  Dockerfile.train  MLproject  README.md  pyproject.toml
app/: loan_pred_app.py
loan_approval_predictor/: evaluate.py  pipeline.py  predict.py  train.py
loan_approval_predictor/config/: config.py
loan_approval_predictor/processing/: data_management.py  preprocessors.py
src/loan_approval_predictor/: evaluate.py  pipeline.py  train.py
src/loan_approval_predictor/config/: config.py
src/loan_approval_predictor/processing/: data_management.py
tests/: test.py  test_predictions.py
train/: README.md  train.ipynb  train.py
