[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-predictor"
version = "0.1.0"
authors = [
    { name = "Eugen", email = "ediasribeiro@lirmm.fr" },
]
description = "A machine learning model to predict loan approval."
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.setuptools.packages.find]
where = ["src"]

