[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-predictor"
version = "0.1.0"
authors = [
    { name = "Eugenio Dias", email = "ediasribeiro@lirmm.fr" },
]
description = "A machine learning model to predict loan approval."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "mlflow>3",
    "numpy>=2.4.4",
    "pandas<3",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.setuptools.packages.find]
where = ["src"]

